--- a/common/service-base/pom.xml
+++ b/common/service-base/pom.xml
@@ -8,7 +8,6 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>service-base</artifactId>
 
     <dependencies>
@@ -21,6 +20,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
         <!--mybatis-plus-->
@@ -103,5 +106,6 @@
             <artifactId>httpclient</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
