完成后台临时用户登录接口，使框架日志文件，自己debug日志文件分离

--- a/infrastructure/gateway/pom.xml
+++ b/infrastructure/gateway/pom.xml
@@ -11,5 +11,26 @@
 
     <artifactId>gateway</artifactId>
 
+    <!--gateWay网关服务需要依赖springCloud gateWay 场景启动器
+    和nacos服务发现注册中心 的依赖
+    -->
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
